Now there is a gap of 8px between hamburgermenu and calculator heading in the headingandlogo class div. Previously, when the screen size is below 250px, then the vertical navbar was overflowing, but now this has been corrected. And vertical navbar will now take less width than the viewport.

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   display:grid;
   grid-template-rows:auto;
   grid-template-columns:repeat(20, 1fr);
-  gap:0;
+  gap:8px;
   background:#d1ccc0;
   margin:0;
   padding:0;
